Bug 1500719 - Ensure toolbar is hidden when going fullscreen r=botond

Differential Revision: https://phabricator.services.mozilla.com/D24348